# fcgi_rpc_serve

demo/back_http_server/: Makefile.am  configure.ac
demo/back_http_server/src/: backend_rpc_server.cpp  backend_rpc_server.h  http_server_handler.cpp  http_server_handler.h  main.cc
demo/front_http_server/: .demo.front_http_server.001.dc  .demo.front_http_server.COMAKE.CONFIGS.SCM  COMAKE  Makefile.am  config_start.sh  configure.ac  start_front.sh
demo/front_http_server/src/: main.cc  params_parser.cpp  params_parser.h  result_format.cpp  result_format.h  thrift_rpc_client.cpp  thrift_rpc_client.h
demo/proto/: build_proto.sh  commun.proto  gen.sh  http_server.thrift  protoc
demo/proto/http_server/gen-cpp/: HttpServer.cpp  HttpServer.h  HttpServer_server.skeleton.cpp  http_server_constants.cpp  http_server_constants.h  http_server_types.cpp  http_server_types.h
demo/proto/proto_cpp/: commun.pb.cc  commun.pb.h
demo/util/: thread.h
demo/utils/: init_google.cpp  init_google.cpp~  init_google.h  init_google.h~
demo/utils/include/: common_log.h  disallow_copy_and_assign.h  thread.h  thread.h~  thrift_client.h
third-64/boost/: .COMAKE.BUILDED.TAG  README
third-64/boost/.svn/: all-wcprops  entries
third-64/boost/include/.svn/: all-wcprops  entries
third-64/boost/include/boost/.svn/: all-wcprops  entries
third-64/boost/lib/.svn/: all-wcprops  entries
third-64/fcgi/: ChangeLog
third-64/fcgi/.svn/: all-wcprops  entries
third-64/fcgi/.svn/text-base/: README.svn-base
third-64/fcgi/include/.svn/: all-wcprops  entries
third-64/fcgi/lib/: libfcgi++.la
third-64/fcgi/lib/.svn/: all-wcprops  entries
third-64/fcgi/lib/.svn/text-base/: libfcgi++.so.0.0.0.svn-base  libfcgi.la.svn-base  libfcgi.so.0.0.0.svn-base
third-64/gflags/: .COMAKE.BUILDED.TAG  README
third-64/gflags/.svn/: all-wcprops  entries
third-64/gflags/include/.svn/: all-wcprops  entries
third-64/gflags/include/gflags/.svn/: all-wcprops  entries
third-64/gflags/include/google/.svn/: all-wcprops  entries
third-64/gflags/lib/.svn/: all-wcprops  entries
third-64/glog/: .COMAKE.BUILDED.TAG  README
third-64/glog/.svn/: all-wcprops  entries
third-64/glog/.svn/text-base/: README.svn-base
third-64/glog/include/.svn/: all-wcprops  entries
third-64/glog/include/glog/.svn/: all-wcprops  entries
third-64/glog/lib/.svn/: all-wcprops  entries
third-64/json-cpp/: .COMAKE.BUILDED.TAG
third-64/json-cpp/.svn/: all-wcprops  entries
third-64/json-cpp/include/.svn/: all-wcprops  entries
third-64/json-cpp/include/json/.svn/: all-wcprops  entries
third-64/json-cpp/lib/.svn/: all-wcprops  entries
third-64/protobuf/: .COMAKE.BUILDED.TAG  README
third-64/protobuf/.svn/: all-wcprops  entries
third-64/protobuf/.svn/text-base/: README.svn-base
third-64/protobuf/include/.svn/: all-wcprops  entries
third-64/protobuf/include/google/.svn/: all-wcprops  entries
third-64/protobuf/include/google/protobuf/: extension_set.h  message_lite.h
third-64/protobuf/javalib/.svn/: all-wcprops  entries
third-64/protobuf/javalib/.svn/text-base/: protobuf-2.4.1-jdk6.jar.svn-base
third-64/protobuf/lib/.svn/: all-wcprops  entries
third-64/thrift/: .COMAKE.BUILDED.TAG
third-64/thrift/.svn/: all-wcprops  entries
third-64/thrift/include/.svn/: all-wcprops  entries
third-64/thrift/include/thrift/.svn/: all-wcprops  (+1 more)
third-64/thrift/lib/: libthrift.la  libthrift_c_glib.la  libthrift_c_glib.so.0.0.0  libthriftnb.la  libthriftz.la
third-64/thrift/lib/.svn/: all-wcprops  entries
third-64/thrift/lib/pkgconfig/: thrift-nb.pc  thrift-z.pc  thrift.pc  thrift_c_glib.pc
(+1764 files in other folders)
